2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/make_security_file.c: Print '='

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* Improve reporting of security message

2016-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.9
	* ReleaseNotes: Change in 3.3.9

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec.src: Use 'mkdirp -p'

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (EXTRA_DIST): Remove
	* recover-src/Makefile.am (EXTRA_DIST): Add uscan.c

2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: s/g_strcmp0/strcmp/
	* man/xml-source/amanda.8.xml: Add amanda-security.conf

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (EXTRA_DIST): Add make_security_file.c
	* common-src/make_security_file.c: Typo

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: Fix security
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl: Fix for non-root

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Check for SINGLE_USERID
	* common-src/Makefile.am: Install example amanda-security.conf in
	  CONFIG_DIR

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* Add a /etc/amanda-security.conf file

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c: Filter option from COMMAND-OPTIONS
	* common-src/ammessage.c: Add message.

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (check_exec_for_suid_message,
	  check_exec_for_suid): New functions to verify a binary is secure
	* client-src/client_util.h(check_exec_for_suid_message,
	  check_exec_for_suid): Add prototypes
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c, client-src/runtar.c: Call