@@ -413,3 +413,8 @@ AC_DEFUN([AMANDA_PROG_REALPATH],
 [
     AC_PATH_PROG(REALPATH,realpath,,$LOCSYSPATH)
 ])
+
+AC_DEFUN([AMANDA_PROG_READLINK],
+[
+    AC_PATH_PROG(READLINK,readlink,,$LOCSYSPATH)
+])
